created front page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Digital Marketing Agency</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav class="nav">
+        <li>Home</li>
+        <li>About</li>
+        <li>Service</li>
+        <li>Contact us</li>
+      </nav>
+      <div class="box1">
+        <div class="leftBox">
+          <p class="name">AWARD WINNING</p>
+          <h2 class="title">DIGITAL MARKETING AGENCY</h2>
+          <p class="detail">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            assumenda nesciunt,Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit.
+          </p>
+          <button class="but">contact us</button>
+        </div>
+
+        <div class="rightBox">box2</div>
+      </div>
+    </div>
+  </body>
 </html>
