created about page

--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
             assumenda nesciunt,Lorem ipsum, dolor sit amet consectetur
             adipisicing elit.
           </p>
-          <button class="but">contact us</button>
+          <button class="but">CONTACT US</button>
         </div>
 
         <div class="rightBox">box2</div>
+      </div>
+      <div class="box2">
+        <div class="top">
+          <div class="topLeft">WHAT WE DO</div>
+          <div class="innerBot">
+            <div class="left">SERVICES PROVIDE FOR YOU</div>
+            <div class="right">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime
+              pariatur expedita, consectetur adipisicing elit. Maxime pariatur
+              expedita,
+            </div>
+          </div>
+        </div>
+        <div class="bottom"></div>
       </div>
     </div>
   </body>
