--- a/index.html
+++ b/index.html
@@ -42,6 +42,27 @@
         </div>
         <div class="bottom"></div>
       </div>
+      <div class="box3">
+        <p>WHY CHOOSE US</p>
+        <h2>WHY WE ARE BEST</h2>
+        <div class="focus"></div>
+      </div>
+      <div class="box4">
+        <p>OUR PROJECT</p>
+        <h2>WHY WE ARE BEST</h2>
+        <div class="work"></div>
+      </div>
+      <div class="box5">
+        <p>EXPERTS GROWTHS</p>
+        <h2>OUR COMPONY GROWTH</h2>
+        <div class="user"></div>
+      </div>
+      <div class="box6">
+        <p>CLIENT'S FEEDBACK</p>
+        <h2>PEPOLE SAY'S ABOUT US!</h2>
+        <div class="quote"></div>
+      </div>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
