--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <button class="but">CONTACT US</button>
         </div>
 
-        <div class="rightBox">box2</div>
+        <div class="rightBox">
+          <img src="assets/one.webp" alt="img" />
+        </div>
       </div>
       <div class="box2">
         <div class="top">
@@ -40,12 +42,34 @@
             </div>
           </div>
         </div>
-        <div class="bottom"></div>
+        <div class="bottom">
+          <div class="imgBox"><img src="assets/1.jpg" /></div>
+          <div class="imgBox"><img src="assets/2.jpg" /></div>
+          <div class="imgBox"><img src="assets/3.jpg" /></div>
+          <div class="imgBox"><img src="assets/4.jpg" /></div>
+        </div>
       </div>
       <div class="box3">
-        <p>WHY CHOOSE US</p>
+        <p class="textBox3">WHY CHOOSE US</p>
         <h2>WHY WE ARE BEST</h2>
-        <div class="focus"></div>
+        <div class="focus">
+          <div class="best">
+            <h3>Clarified vision</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="best">
+            <h3>High Performance</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="best">
+            <h3>maintain security</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="best">
+            <h3>Better Security and Quality</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
       </div>
       <div class="box4">
         <p>OUR PROJECT</p>
