--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="container">
       <nav class="nav">
-        <li>Home</li>
-        <li>About</li>
-        <li>Service</li>
-        <li>Contact us</li>
+        <li><a href="#home"> Home</a></li>
+        <li><a href="#about"> About</a></li>
+        <li><a href="#service"> Service</a></li>
+        <li><a href="#contact"> Contact us</a></li>
       </nav>
-      <div class="box1">
+      <div id="home" class="box1">
         <div class="leftBox">
           <p class="name">AWARD WINNING</p>
           <h2 class="title">DIGITAL MARKETING AGENCY</h2>
@@ -23,7 +23,7 @@
             assumenda nesciunt,Lorem ipsum, dolor sit amet consectetur
             adipisicing elit.
           </p>
-          <button class="but">CONTACT US</button>
+          <button class="but"><a href="#contact"> CONTACT US</a></button>
         </div>
 
         <div class="rightBox">
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="box2">
-        <div class="top">
+        <div id="service" class="top">
           <div class="topLeft">WHAT WE DO</div>
           <div class="innerBot">
             <div class="left">SERVICES PROVIDE FOR YOU</div>
@@ -54,39 +54,127 @@
         <h2>WHY WE ARE BEST</h2>
         <div class="focus">
           <div class="best">
+            <img src="assets/target.svg" alt="img" />
             <h3>Clarified vision</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="best">
+            <img src="assets/performance.svg" alt="img" />
             <h3>High Performance</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="best">
+            <img src="assets/security.svg" alt="img" />
             <h3>maintain security</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="best">
+            <img src="assets/strategy.svg" alt="img" />
             <h3>Better Security and Quality</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
       </div>
-      <div class="box4">
-        <p>OUR PROJECT</p>
+      <div id="about" class="box4">
+        <p class="txt1">OUR PROJECT</p>
         <h2>WHY WE ARE BEST</h2>
-        <div class="work"></div>
+        <div class="work">
+          <div class="left">
+            <img src="assets/imgg.jpg" alt="img" />
+          </div>
+          <div class="right">
+            <div class="txt">
+              <h3>Genderless kei - japan's Hot</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="txt" id="t1">
+              <h3>Better Strategy & Quality</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="txt">
+              <h3>Genderless kei - japan's Hot</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem
+                ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="box5">
-        <p>EXPERTS GROWTHS</p>
+        <p class="nm">EXPERTS GROWTHS</p>
         <h2>OUR COMPONY GROWTH</h2>
-        <div class="user"></div>
+        <div class="user">
+          <div class="b1">
+            <img src="assets/heart.svg" alt="img" />
+            <h3>199+</h3>
+            <p>Satisfied Customer</p>
+          </div>
+          <div class="b1">
+            <img src="assets/clock.svg" alt="img" />
+            <h3>1591+</h3>
+            <p>Days of operation</p>
+          </div>
+          <div class="b1">
+            <img src="assets/complete.svg" alt="img" />
+            <h3>283+</h3>
+            <p>Complete Project</p>
+          </div>
+          <div class="b1">
+            <img src="assets/award.svg" alt="img" />
+            <h3>75+</h3>
+            <p>Win Award</p>
+          </div>
+        </div>
       </div>
-      <div class="box6">
-        <p>CLIENT'S FEEDBACK</p>
+      <div id="contact" class="box6">
+        <p class="nm">CLIENT'S FEEDBACK</p>
         <h2>PEPOLE SAY'S ABOUT US!</h2>
-        <div class="quote"></div>
+        <div class="feed">
+          <div class="left">
+            <p class="comm">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
+              nemo ipsa iste quae quis facere maxime aspernatur laboriosam ad
+              explicabo iure commodi,
+            </p>
+            <p class="name">Akash-creater</p>
+          </div>
+          <div class="right">
+            <form class="form">
+              <label for="name">Name:</label>
+              <input id="name" placeholder="Name" type="text" />
+              <label for="email">Email:</label>
+              <input id="email" placeholder="email" type="email" />
+              <label for="feed">Feedback:</label>
+              <textarea
+                class="text"
+                id="feed"
+                placeholder="Feedback"
+                rows="4"
+                cols="35"
+              ></textarea>
+              <button class="but" type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
       </div>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="logo">
+          <img src="assets/c2.png" alt="img" />
+          <img src="assets/c3.png" alt="img" />
+          <img src="assets/c4.png" alt="img" />
+          <img src="assets/c5.png" alt="img" />
+          <img src="assets/c6.png" alt="img" />
+          <img src="assets/c7.png" alt="img" />
+          <img src="assets/c8.png" alt="img" />
+        </div>
+      </footer>
     </div>
   </body>
 </html>
