--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           </div>
         </div>
         <div class="bottom">
-          <div class="imgBox"><img src="assets/1.jpg" /></div>
-          <div class="imgBox"><img src="assets/2.jpg" /></div>
-          <div class="imgBox"><img src="assets/3.jpg" /></div>
-          <div class="imgBox"><img src="assets/4.jpg" /></div>
+          <div class="imgBox"><img src="assets/1.webp" /></div>
+          <div class="imgBox"><img src="assets/2.webp" /></div>
+          <div class="imgBox"><img src="assets/3.webp" /></div>
+          <div class="imgBox"><img src="assets/4.webp" /></div>
         </div>
       </div>
       <div class="box3">
@@ -80,7 +80,7 @@
         <h2>WHY WE ARE BEST</h2>
         <div class="work">
           <div class="left">
-            <img src="assets/imgg.jpg" alt="img" />
+            <img src="assets/imgg.webp" alt="img" />
           </div>
           <div class="right">
             <div class="txt">
